--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "telegraf": "^4.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
