--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "forex_assistant_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc || echo done",
+    "watch": "tsc -w",
+    "prestart": "npm run build",
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "azure-functions-core-tools": "^3.0.3284",
     "telegraf": "^4.1.0"
   },
   "devDependencies": {
+    "@azure/functions": "^1.0.2-beta2",
+    "@types/node": "^14.14.31",
+    "ngrok": "^3.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^3.3.3"
   }
 }
