--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "rootDir": "./",
     "sourceMap": true,
     "inlineSources": true,
+    "skipLibCheck": true,
     "allowJs": false,
     "noImplicitAny": true,
     "noUnusedLocals": true,
