--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "azure-functions-core-tools": "^3.0.3284",
     "telegraf": "^4.1.0"
   },
